# extended_vault

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini  main.py
src/DB/: sqlalchemy_database_manager.py
src/DB/managers/: base_manager.py  users_manager.py  vaults_manager.py
src/DB/models/: __init__.py  users.py  vaults.py
src/alembic/: env.py
src/alembic/versions/: 1421b8904484_add_var.py  643e59240a15_fix_value.py  6d390803ef6f_fix_value.py  8a23750dd467_init.py  96ef6803706d_fix_value.py  a188668a7941_second.py
src/celery_schedular/: celery_worker.py  tasks.py
src/celery_schedular/services/: fetch_data_from_api_service.py
src/core/: config.py  custom_logs.py
src/handlers/: help.py  ping.py  start.py  stats.py
src/texts/: texts.py
