[project]
name = "extended-vault"
version = "0.1.0"
description = ""
authors = [
    {name = "Valentino",email = "bychynski.valiantsin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
